scrollbars fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import "primeflex/primeflex.min.css";
 html,
 body {
@@ -10,63 +9,37 @@ body {
 .text-layout-color {
   color: var(--text-color)
 }
-
-body::-webkit-scrollbar  {
-  width: 12px;               /* width of the entire scrollbar */
-}
-body::-webkit-scrollbar  {
+.p-dropdown-items-wrapper{
   scrollbar-width: thin;
-}
-
-body::-webkit-scrollbar-track {
-  background: var(--surface-a);        /* color of the tracking area */
-}
-
-body::-webkit-scrollbar-thumb{
-  background-color: var(--surface-d);    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 1px solid var(--surface-c); /* border radius/* creates padding around scroll thumb */
-}
-
-.p-datatable-wrapper ::-webkit-scrollbar  {
-  width: 12px;               /* width of the entire scrollbar */
 }
 .p-datatable-wrapper  {
   scrollbar-width: thin;
 }
+.p-dialog-content {
+  scrollbar-width: thin;             /* width of the entire scrollbar */
+}
 
-.p-datatable-wrapper::-webkit-scrollbar-track  {
+::-webkit-scrollbar  {
+  width: 6px;
+  height: 6px;               /* width of the entire scrollbar */
+}
+::-webkit-scrollbar-track {
   background: var(--surface-a);        /* color of the tracking area */
 }
-.p-datatable-wrapper::-webkit-scrollbar-thumb {
+
+::-webkit-scrollbar-thumb{
   background-color: var(--surface-d);    /* color of the scroll thumb */
   border-radius: 20px;       /* roundness of the scroll thumb */
   border: 2px solid var(--surface-c); /* border radius/* creates padding around scroll thumb */
+}
+.p-datatable-wrapper::-webkit-scrollbar  {
+  width: 8px;
+  height: 8px;               /* width of the entire scrollbar */
 }
 .p-dropdown-items-wrapper::-webkit-scrollbar  {
-  width: 12px;               /* width of the entire scrollbar */
-}
-.p-dropdown-items-wrapper{
-  scrollbar-width: thin;
-}
-
-.p-dropdown-items-wrapper::-webkit-scrollbar-track  {
-  background: var(--surface-a);        /* color of the tracking area */
-}
-.p-dropdown-items-wrapper::-webkit-scrollbar-thumb {
-  background-color: var(--surface-d);    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 2px solid var(--surface-c); /* border radius/* creates padding around scroll thumb */
-}
-
-.p-dialog-content::-webkit-scrollbar  {
   width: 8px;               /* width of the entire scrollbar */
 }
-.p-dialog-content::-webkit-scrollbar-track  {
-  background: var(--surface-a);        /* color of the tracking area */
-}
-.p-dialog-content::-webkit-scrollbar-thumb {
-  background-color: var(--surface-d); /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 2px solid var(--surface-c); /* border radius/* creates padding around scroll thumb */
+.p-dialog-content::-webkit-scrollbar {
+  width: 6px; /* width of the entire scrollbar */
+  height: 8px; /* height of the entire scrollbar */
 }
